--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "sass-embedded": "^1.93.3"
+    "sass-embedded": "^1.93.3",
+    "typescript": "^5.9.3",
+    "vue-tsc": "^3.1.3"
   }
 }
