--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@nuxt/image": "^1.11.0",
     "nuxt": "^4.2.0",
+    "nuxt-auth-utils": "^0.5.25",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "sass-embedded": "^1.93.3",
